@@ -4,6 +4,7 @@ Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 
 Apache Solr integration 7.x-1.0-xxxx, 2011-xx-xx
 ------------------------------
+#1324842 by Nick_vh: Added setAvailableSorts to the api.
 #1000532 by craigmc, jpmckinney: Fixed Non-current/valid Node Types not excluded from index.
 #1320906 by Nick_vh | brianV: Fixed Taxonomy Search page title should be dynamic based on term.
 #1320076 by Nick_vh | egarias: Fixed Results per page should be non-negative integer less than 200.
